# RMTraining

./: .fie.swp  .file1.txt.swp  .file2.txt.swo  .file2.txt.swp  .readme.swp  99yyds  Brooks_was_here.txt  LICENSE  PythonApplication1.py  PythonApplication2.py  README.md  Something  astar-training-on-cifar10.ipynb  detect.py  file1.txt  file2.txt  file998244353.txt  hello_navi.txt  hellogit.txt  nihao.txt  package.xml  parameters.yaml  random.txt  some_thoughts.txt
ML_homework/: ML_homework_wzl.py
OpenCV_assignment/: CircleDetection.py  README.md
adder_pkg/: CMakeLists.txt  package.xml
adder_pkg/src/: publisher.cpp  subscriber.cpp
asm2_pkg/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
asm2_pkg/launch/: .asm2.launch.swp  asm2.launch
ass3/: CMakeLists.txt  README.md
ass3/src/: ass3.cpp
assignment2_pkg/: CMakeLists.txt  README.md  README_draft.md  package.xml
beginner_pkg/: CMakeLists.txt  final.launch  package.xml  如何从ssh server上下载文件到本地啊
detect_homework/: detect.py  parameters.yaml
homework_pkg/: CMakeLists.txt
hw3-machineLearning/: astar-training-on-cifar10.ipynb
hw4/: answer.txt  custom_barrier.cpp  safe_hashmap.cpp
hw4-resource_management/: custom_barrier.h  custom_string.cpp  custom_string.h  safe_hashmap.h
input_sum/: CMakeLists.txt  package.xml
laser_pkg/: CMakeLists.txt  package.xml
lidar_decoder/: CMakeLists.txt  package.xml
my_lidar_reader/: CMakeLists.txt  package.xml
opencv_homework/: detect.py  parameters.yaml
package1/: CMakeLists.txt  package.xml
wyassignment_pkg/: CMakeLists.txt  package.xml
(+44 files in other folders)
